# realflight_ws

./: .gitignore  .gitmodules  LICENSE  README.md  extras.txt  plot_multi_traj.py  plot_traj.py
data/3drone_trajectories_new(nq=3)/: drone_0_traj_raw_20hz.csv  drone_0_traj_smoothed_100hz.csv  drone_1_traj_raw_20hz.csv  drone_1_traj_smoothed_100hz.csv  drone_2_traj_raw_20hz.csv  drone_2_traj_smoothed_100hz.csv
data/3drone_trajectories_new(nq=3,m2=0)/: drone_0_traj_raw_20hz.csv  drone_0_traj_raw_20hz_enu.csv  drone_0_traj_smoothed_100hz.csv  drone_0_traj_smoothed_100hz_enu.csv  drone_1_traj_raw_20hz.csv  drone_1_traj_raw_20hz_enu.csv  drone_1_traj_smoothed_100hz.csv  drone_1_traj_smoothed_100hz_enu.csv  drone_2_traj_raw_20hz.csv  drone_2_traj_raw_20hz_enu.csv  drone_2_traj_smoothed_100hz.csv  drone_2_traj_smoothed_100hz_enu.csv
data/3drone_trajectories_new(nq=3,m2=0.1,rp=[0.0,0.07])/: drone_0_traj_raw_20hz.csv  drone_0_traj_raw_20hz_enu.csv  drone_0_traj_smoothed_100hz.csv  drone_0_traj_smoothed_100hz_enu.csv  drone_1_traj_raw_20hz.csv  drone_1_traj_raw_20hz_enu.csv  drone_1_traj_smoothed_100hz.csv  drone_1_traj_smoothed_100hz_enu.csv  drone_2_traj_raw_20hz.csv  drone_2_traj_raw_20hz_enu.csv  drone_2_traj_smoothed_100hz.csv  drone_2_traj_smoothed_100hz_enu.csv
data/3drone_trajectories_new(nq=3,m2=0.2kg,rp=[0.04,0.03])/: drone_0_traj_raw_20hz.csv  drone_0_traj_raw_20hz_enu.csv  drone_0_traj_smoothed_100hz.csv  drone_0_traj_smoothed_100hz_enu.csv  drone_1_traj_raw_20hz.csv  drone_1_traj_raw_20hz_enu.csv  drone_1_traj_smoothed_100hz.csv  drone_1_traj_smoothed_100hz_enu.csv  drone_2_traj_raw_20hz.csv  drone_2_traj_raw_20hz_enu.csv  drone_2_traj_smoothed_100hz.csv  drone_2_traj_smoothed_100hz_enu.csv
data/3drone_trajectories_new-sim/: drone_0_traj_raw_20hz.csv  drone_1_traj_raw_20hz.csv  drone_1_traj_smoothed_100hz.csv  drone_2_traj_raw_20hz.csv  (+1 more)
scripts/: geom_multilift_hitl_start.sh  prepare.sh  record_start_multi.sh  record_start_multi_traj.sh  start_multi_tmux.sh  start_single_traj.sh
src/geom_multilift/: CMakeLists.txt
src/geom_multilift/config/: geom_multilift_hitl_params.yaml  geom_multilift_realflight_params.yaml
src/geom_multilift/include/geom_multilift/: geom_multilift_hitl_node.hpp  geom_multilift_realflight_node.hpp
src/geom_multilift/launch/: geom_multilift_hitl_sync.launch.py
src/geom_multilift/src/: geom_multilift_hitl_node.cpp  geom_multilift_realflight_node.cpp
tools/: plot_multi_traj.py
(+47 files in other folders)
